# warehouse_manager

./: .env  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  mig.py  pyproject.toml
tests/: conftest.py  test_orders.py  test_products.py
warehous_manager/: app.py  main.py
warehous_manager/config/: base.py
warehous_manager/db/: db.py
warehous_manager/dto/: order_items.py  orders.py  products.py
warehous_manager/enams/: statuses.py
warehous_manager/migrations/: env.py
warehous_manager/migrations/versions/: 15036f837f86_.py  1de21d074cd9_.py  2ffb0a29653b_.py  316fa0e14b58_.py  31be8c31c52c_.py  339a9117bdf5_.py  370442913f5b_.py  3723d36aa159_.py  417eeb61abb0_.py  59a5766bc483_.py  5b1e99fade87_.py  5c9d6d131a61_.py  6d6bcb1d8c0f_.py  956e38c6e8d4_.py  98349d1e66b3_.py  989c15120293_.py  a3c156bfe337_.py  a8875e5fd7af_.py  aaaa8ec55027_.py  b7445af37467_.py  b8791dc872bc_.py  bd375f683367_.py  bd4f9c53b852_.py  c89a019488e0_.py  ce4c832c4f25_.py  d900996094f5_.py  dbdf427f56f1_.py  e365b9182959_.py  eb24f0127e3c_.py  f137adcd4cd6_.py  fd54f790a6df_.py  fddde7bfcf50_.py
warehous_manager/models/: order_items.py  orders.py  products.py
warehous_manager/repositories/: order_items.py  orders.py  products.py
warehous_manager/routers/: orders.py  products.py
warehous_manager/schemas/: order_items.py  orders.py  products.py  serializers.py
warehous_manager/services/: inventory_manager.py  orders.py  products.py
warehous_manager/utils/: repository.py
